added multiselect lists for band maintenance

--- a/web/style/screen.css
+++ b/web/style/screen.css
@@ -131,6 +131,12 @@ fieldset {
 	width: 250px;
 	text-align: left;
 }
+
+.gridtable {
+  border: 0px;
+}
+
+
 /* Sidebar
 ----------------------------------------------- */
 .notes {
