bag icon in header bar reflects whether the session contains ticket reservationns. Ticket order number is being validated in TicketController against the available Ticketcontingent.

--- a/web/style/screen.css
+++ b/web/style/screen.css
@@ -261,6 +261,11 @@ fieldset {
 	float: left;
 	padding: 1px 0 6px 120px;
 }
+
+#title .bag {
+	padding: 10px 10px 10px 10px;
+}
+
 #status {
 	color: #C7B299;
 	float: right;
